--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,22 @@
-<%@ page contentType="text/html;charset=UTF-8" %>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <!DOCTYPE html>
-<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OES_学生|教师登录</title>
-    <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" href="<c:url value="/webjars/adminlte/2.3.11/bootstrap/css/bootstrap.min.css"/>">
-    <link href="<c:url value="/static/css/login.css"/>" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript"
-            src="<c:url value="/webjars/adminlte/2.3.11/plugins/jQuery/jquery-2.2.3.min.js"/>"></script>
-    <script type="text/javascript" src="<c:url value="/static/plugins/jsencrypt/jsencrypt.min.js"/>"></script>
-    <script type="text/javascript" src="<c:url value="/static/js/login.js"/>" charset="utf-8"></script>
-    <script type="text/javascript" src="<c:url value="/static/js/check.js"/>" charset="UTF-8"></script>
+    <!-- 引入全局公共js / css -->
+    <%
+        include("include/js.html"){}
+    %>
+    <!-- 引入全局公共js -->
+    <%
+    include("include/css.html"){}
+    %>
+    <!-- 登录页面的样式和加密脚本 -->
+    <link href="/static/css/login.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="/static/plugins/jsencrypt/jsencrypt.min.js"></script>
+    <script type="text/javascript" src="/static/js/login.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/js/check.js" charset="UTF-8"></script>
     <script>
         $(function () {
             const func = function () {
@@ -50,14 +52,11 @@
     <!--学生登录-->
     <div class="web_qr_login" id="web_qr_login" style="display: block;">
         <div class="web_login">
-            <form name="student_login" method="post" onsubmit="return login_studentID_username()">
+            <form name="student_login" id="student_login" method="post">
+                <div>
+                    <p class="login-box-msg cue">${message!"请输入学号和密码进行登录"}</p>
+                </div>
                 <ul class="reg_form">
-                    <c:if test="${empty message}">
-                        <div id="studentCue" class="cue" style="width: 100%">请输入学号和密码进行登录</div>
-                    </c:if>
-                    <c:if test="${!empty message}">
-                        <p class="login-box-msg cue">${message}</p>
-                    </c:if>
                     <li>
                         <div class="">
                             <input type="text" id="studentId" name="studentId" value="201601" style="width: 100%"
@@ -74,14 +73,14 @@
                         </div>
                     </li>
                     <li>
-                        <div class="box-footer">
-                            <input type="submit" id="s_reg" style="width: 100%"
+                        <div class="">
+                            <input type="button" id="stuLogin" style="width: 100%"
                                    class="button_blue " value="立即登录"/>
                         </div>
                     </li>
                     <li>
-                        <div class="box-footer">
-                            <a class="pull-right" href="<c:url value="/admin/login"/>">我是管理员？点击这里进行登录</a>
+                        <div class="">
+                            <a class="pull-right" href="/admin/login">我是管理员？点击这里进行登录</a>
                         </div>
                     </li>
                 </ul>
@@ -92,15 +91,10 @@
     <!--老师登录-->
     <div class="qlogin" id="qlogin" style="display: none; ">
         <div class="web_login">
-            <form name="teacher_login" id="regUser" action="${pageContext.request.contextPath}/teacher/login"
+            <form name="teacher_login" id="regUser" action="/teacher/login"
                   method="post" onsubmit="return login_teacherID_username()">
+                <p class="login-box-msg cue">${message_tea!"请输入职工号和密码进行登录"}</p>
                 <ul class="reg_form" id="reg-ul">
-                    <c:if test="${empty message_tea}">
-                        <div id="teacherCue" class="cue" style="width: 100%">请输入职工号和密码进行登录</div>
-                    </c:if>
-                    <c:if test="${!empty message_tea}">
-                        <p class="login-box-msg cue">${message_tea}</p>
-                    </c:if>
                     <li>
                         <div class="">
                             <input style="width: 100%" placeholder="请输入职工号" type="text" id="teacherId" name="teacherId"
@@ -117,14 +111,14 @@
                                maxlength="16" class="inputstyle2 encPass"/>
                     </li>
                     <li>
-                        <div class="box-footer">
+                        <div class="">
                             <input type="submit" id="reg" style="width: 100%"
                                    class="button_blue" value="立即登录"/>
                         </div>
                     </li>
                     <li>
-                        <div class="box-footer">
-                            <a class="pull-right" href="<c:url value="/admin/login"/>">我是管理员？点击这里进行登录</a>
+                        <div class="">
+                            <a class="pull-right" href="/admin/login">我是管理员？点击这里进行登录</a>
                         </div>
                     </li>
                 </ul>
@@ -135,6 +129,25 @@
 </div>
 <div class="b1"></div>
 <div class="b2"></div>
-<jsp:include page="./include/login_footer.jsp"/>
+<%
+    include("include/login_footer.html"){}
+%>
+<script src="/static/plugins/layer/layer.js"></script>
 </body>
-</html>
+
+<script>
+    // 学生登录
+    $('#stuLogin').click(function () {
+        // 密码加密
+        login_studentID_username();
+        $.post("/student/login", $('#student_login').serialize()).done(function (data) {
+            if (data.state === "success") {
+                window.location.href = "/student/home/" + data.data;
+            } else {
+                layer.msg(data.message);
+            }
+        }).error(function () {
+            layer.msg("系统异常...");
+        });
+    })
+</script>
