--- a/src/main/resources/templates/student/changePass.html
+++ b/src/main/resources/templates/student/changePass.html
@@ -1,23 +1,19 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ page contentType="text/html;charset=UTF-8" %>
 <!DOCTYPE html>
-<html>
+<html lang="zh_CN">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 修改密码</title>
     <!-- css style -->
-    <%@ include file="../include/css.jsp" %>
+    <%include("../include/css.html"){}%>
 </head>
 <body class="hold-transition skin-green sidebar-mini">
 <!-- Site wrapper -->
 <div class="wrapper">
     <!-- 顶部导航栏部分 -->
-    <%@ include file="../student/include/header.jsp" %>
+    <%include("../student/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <jsp:include page="../student/include/sider.jsp">
-        <jsp:param name="menu" value="info"/>
-    </jsp:include>
+    <%include("../student/include/sider.html"){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
         <!-- Main content -->
@@ -32,9 +28,9 @@
                         <div class="form-group">
                             <label for="oldPass">原始密码</label>
                             <input type="password" id="oldPass" name="oldPassword" class="form-control">
-                                <c:if test="${!empty message}">
-                                    <p class="login-box-msg cue">${message}</p>
-                                </c:if>
+                            <% if( isNotEmpty(message) ){ %>
+                            <p class="login-box-msg cue">${message}</p>
+                            <% } %>
                         </div>
                         <div class="form-group">
                             <label for="password">新密码</label>
@@ -56,14 +52,12 @@
         </section>
         <!-- /.content -->
     </div>
-    <!-- /.content-wrapper -->
-    <!-- 底部 -->
-    <%@ include file="../include/footer.jsp" %>
+    <!-- 引入footer -->
+    <%include("../include/footer.html"){}%>
 </div>
-<!-- ./wrapper -->
-<!-- js -->
-<%@ include file="../include/js.jsp" %>
-<script src="<c:url value="/static/plugins/jquery-validation/jquery.validate.js"/>"></script>
+<!-- 引入全局 js 脚本文件 -->
+<%include("../include/js.html"){}%>
+<script src="/static/plugins/jquery-validation/jquery.validate.js"></script>
 <script>
     $(function () {
         $("#editBtn").click(function () {
