--- a/src/main/resources/templates/student/include/header.html
+++ b/src/main/resources/templates/student/include/header.html
@@ -1,5 +1,3 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ page contentType="text/html;charset=UTF-8" %>
 <!-- 顶部导航栏部分 -->
 <header class="main-header">
     <!-- Logo -->
@@ -20,26 +18,28 @@
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="<c:url value="/webjars/adminlte/2.3.11/dist/img/avatar5.png"/>" class="user-image" alt="User Image">
-                        <span class="hidden-xs">同学：${sessionScope.get("student").name}</span>
+                        <img src="/webjars/adminlte/2.3.11/dist/img/avatar5.png" class="user-image"
+                             alt="User Image"/>
+                        <span class="hidden-xs">学生：${session.student.name}</span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
-                            <img src="<c:url value="/webjars/adminlte/2.3.11/dist/img/avatar5.png"/>" class="img-circle" alt="User Image">
+                            <img src="/webjars/adminlte/2.3.11/dist/img/avatar5.png" class="img-circle"
+                                 alt="User Image"/>
                             <p>
-                                <span>${sessionScope.get("student").name} 同学你好！</span> <br/>
+                                <span>${session.student.name} 同学你好！</span> <br/>
                                 欢迎使用OES在线考试系统！
                             </p>
                         </li>
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="/student/${sessionScope.get("student").id}/changePass"
+                                <a href="/student/${session.student.id}/changePass"
                                    class="btn btn-default btn-flat">个人设置</a>
                             </div>
                             <div class="pull-right">
-                                <a href="<c:url value="/logout"/>" class="btn btn-default btn-flat">安全退出</a>
+                                <a href="/student/logout" class="btn btn-default btn-flat">安全退出</a>
                             </div>
                         </li>
                     </ul>
