[update] 完成所有页面的模板迁移工作

--- a/src/main/resources/templates/include/css.html
+++ b/src/main/resources/templates/include/css.html
@@ -9,3 +9,5 @@
 <link rel="stylesheet" href="/webjars/adminlte/2.3.11/dist/css/AdminLTE.min.css"/>
 <!-- AdminLTE Skins. Choose a skin from the css/skins -->
 <link rel="stylesheet" href="/webjars/adminlte/2.3.11/dist/css/skins/_all-skins.min.css"/>
+<!-- icon -->
+<link rel="shortcut icon" href="/static/images/favicon.ico"/>
