--- a/src/main/resources/templates/admin/changePass.html
+++ b/src/main/resources/templates/admin/changePass.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="zh_CN">
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 修改密码</title>
-    <!-- css style -->
-    <%include("../include/css.html"){}%>
+    <title>修改密码</title>
+    <!-- 引入全局 css 文件 -->
+    <%
+    include("../include/css.html"){}
+    %>
 </head>
-<body class="hold-transition skin-green sidebar-mini">
+<body class="hold-transition skin-purple sidebar-mini">
+
 <div class="wrapper">
-    <!-- 顶部导航栏部分 -->
-    <%include("../student/include/header.html"){} %>
+    <!-- 引入头部 -->
+    <%
+    include("include/header.html"){}
+    %>
     <!-- 左侧菜单栏 -->
-    <%include("../student/include/sider.html"){}%>
+    <%
+    include("include/sider.html"){}
+    %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+
         <section class="content">
+
             <div class="box">
                 <div class="box-header with-border">
                     <h3 class="box-title">修改密码</h3>
@@ -23,8 +33,8 @@
                 <div class="box-body">
                     <form method="post" id="change">
                         <div class="form-group">
-                            <label for="oldPass">原始密码</label>
-                            <input type="password" id="oldPass" name="oldPassword" class="form-control">
+                            <label for="oldPassword">原始密码</label>
+                            <input id="oldPassword" type="password" name="oldPassword" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="password">新密码</label>
@@ -39,33 +49,26 @@
                 <div class="box-footer">
                     <button id="editBtn" class="btn btn-primary">保存</button>
                 </div>
+
             </div>
         </section>
     </div>
     <!-- 引入footer -->
-    <%include("../include/footer.html"){}%>
+    <%
+    include("../include/footer.html"){}
+    %>
 </div>
 <!-- 引入全局 js 脚本文件 -->
-<%include("../include/js.html"){}%>
-<script src="/static/plugins/layer/layer.js"></script>
+<%
+include("../include/js.html"){}
+%>
 <script src="/static/plugins/jquery-validation/jquery.validate.js"></script>
 <script>
 
-    // 提交密码
+    // 修改密码
     $(function () {
         $("#editBtn").click(function () {
-            let data = $("#change").serialize();
-            $.ajax({
-                type: "POST",
-                data: data,
-                success: function (res) {
-                    if (res.state === 'success') {
-                        window.location.href = "/";
-                    } else {
-                        layer.msg(res.message);
-                    }
-                }
-            })
+            $("#change").submit();
         });
 
         //jqValidate验证
