--- a/src/main/resources/templates/student/scoreDetail.html
+++ b/src/main/resources/templates/student/scoreDetail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 试卷详情</title>
-    <!-- css style -->
+    <!-- 全局 css -->
     <%include("../include/css.html"){}%>
     <style>
         th {
@@ -17,7 +17,6 @@
     </style>
 </head>
 <body class="hold-transition skin-green sidebar-mini">
-<!-- Site wrapper -->
 <div class="wrapper">
     <!-- 顶部导航栏部分 -->
     <%include("../student/include/header.html"){} %>
@@ -25,7 +24,6 @@
     <%include("../student/include/sider.html"){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-        <!-- Main content -->
         <section class="content">
             <div class="box">
                 <div class="box-header with-border">
@@ -36,7 +34,6 @@
                     </div>
                 </div>
                 <div class="box-body ">
-
                     <table class="table">
                         <tr>
                             <th class="td_title" style="background-color: #e4e4e4">试卷名称：${paper.paperName}</th>
@@ -79,7 +76,6 @@
                     </table>
                 </div>
             </div>
-
             <div class="box">
                 <div class="box-header with-border">
                     <h3 class="box-title">试卷详情</h3>
@@ -139,7 +135,6 @@
                                 </div>
                             </div>
                             <% } %>
-
                             <!--多选题-->
                             <% if( isNotEmpty(qMulChoiceList) ){ %>
                             <div class="panel panel-primary">
@@ -192,7 +187,6 @@
                                 </div>
                             </div>
                             <% } %>
-
                             <!--判断题-->
                             <% if(isNotEmpty(qTofList)){ %>
                             <div class="panel panel-primary">
@@ -235,7 +229,6 @@
                                 </div>
                             </div>
                             <% } %>
-
                             <!--填空题-->
                             <% if(isNotEmpty(qFillList)){ %>
                             <div class="panel panel-primary">
@@ -268,7 +261,6 @@
                                 </div>
                             </div>
                             <% } %>
-
                             <!--简答题-->
                             <% if(isNotEmpty(qSaqList)){ %>
                             <div class="panel panel-primary">
@@ -304,7 +296,6 @@
                                 </div>
                             </div>
                             <% } %>
-
                             <!--编程题-->
                             <% if(isNotEmpty(qProgramList)){ %>
                             <div class="panel panel-primary">
@@ -342,14 +333,12 @@
                 </div>
             </div>
         </section>
-        <!-- /.content -->
     </div>
     <!-- 引入footer -->
     <%include("../include/footer.html"){}%>
 </div>
 <!-- 引入全局 js 脚本文件 -->
 <%include("../include/js.html"){}%>
-<script src="/static/plugins/moment/moment.js"></script>
 </body>
 </html>
 
