--- a/src/main/resources/templates/teacher/sysAnnounceList.html
+++ b/src/main/resources/templates/teacher/sysAnnounceList.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 系统公告列表</title>
+    <!-- 引入全局 css 文件 -->
     <%
     include("../include/css.html"){}
     %>
     <style>
+
         .table > tbody > tr:hover {
             cursor: pointer;
         }
@@ -25,21 +27,25 @@
         }
 
     </style>
+
+
 </head>
-<body class="hold-transition skin-green sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini">
 
 <div class="wrapper">
+    <!-- 引入头部 -->
     <%
-    include("../student/include/header.html"){}
+    include("include/header.html"){}
     %>
     <!-- 左侧菜单栏 -->
     <%
-    include("../student/include/sider.html"){}
+    include("include/sider.html"){}
     %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
 
         <section class="content">
+
 
             <div class="box">
                 <div class="box-header with-border">
@@ -50,39 +56,35 @@
                 <div class="box-body no-padding">
                     <table class="table table-hover">
                         <tbody>
-                        <%
-                        for(announce in announceList){
-                        %>
+                        <% if(isEmpty(announceList)){ %>
+                        <td colspan="6">暂无公告信息</td>
+                        <% } %>
+                        <% for( announce in announceList ){ %>
                         <tr class="rowDetail success" rel="${announce.id}">
                             <th class="td_title">${announceLP.index}. ${announce.title} <span class="pull-right">
-                                    发布时间： ${announce.createTime,dateFormat="yyyy-MM-dd HH:mm:ss"}
+                                    发布时间：${announce.createTime,dateFormat="yyyy年MM月dd日 HH:mm:ss"}
                                 </span>
                             </th>
                         </tr>
                         <tr>
                             <td>${announce.content}</td>
                         </tr>
-                        <%}elsefor{%>
-                        <tr>
-                            <td colspan="6">暂无公告信息</td>
-                        </tr>
-                        <%}%>
+                        <% } %>
                         </tbody>
                     </table>
                 </div>
+
             </div>
+
             <ul id="pagination-demo" class="pagination-sm pull-right"></ul>
         </section>
+
     </div>
     <!-- 引入footer -->
     <%
     include("../include/footer.html"){}
     %>
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<%
-include("../include/js.html"){}
-%>
 </body>
 </html>
 
