--- a/src/main/resources/templates/admin/include/sider.html
+++ b/src/main/resources/templates/admin/include/sider.html
@@ -1,19 +1,16 @@
 <aside class="main-sidebar">
-    <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
-        <!-- 搜索表单，不需要删除即可 -->
-        <form action="#" method="get" class="sidebar-form">
-            <div class="input-group">
-                <input type="text" name="q" class="form-control" placeholder="Search...">
-                <span class="input-group-btn">
-                  <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                  </button>
-                </span>
-            </div>
-        </form>
         <ul class="sidebar-menu" data-widget="tree">
             <li class="header">系统功能</li>
-            <li class="treeview">
+            <li class="treeview ${name == 'home'?'active':''}">
+                <a href="/admin/home/${session.admin.id}">
+                    <i class="fa fa-dashboard"></i> <span>首页</span>
+                    <span class="pull-right-container">
+                      <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+            </li>
+            <li class="treeview  ${strutil.contain(name,'announce')?'active':''}">
                 <a href="/admin/announce">
                     <i class="fa fa-dashboard"></i> <span>公告管理</span>
                     <span class="pull-right-container">
@@ -21,7 +18,7 @@
                     </span>
                 </a>
             </li>
-            <li class="treeview">
+            <li class="treeview ${name == 'academy'?'active':''}">
                 <a href="/admin/academy">
                     <i class="fa fa-university"></i> <span>学院管理</span>
                     <span class="pull-right-container">
@@ -29,7 +26,7 @@
                     </span>
                 </a>
             </li>
-            <li class="treeview">
+            <li class="treeview ${name == 'teacher'?'active':''}">
                 <a href="/admin/teacher">
                     <i class="fa fa-dashboard"></i> <span>教师管理</span>
                     <span class="pull-right-container">
@@ -37,7 +34,7 @@
                     </span>
                 </a>
             </li>
-            <li class="treeview">
+            <li class="treeview ${name == 'admin'?'active':''}">
                 <a href="/admin">
                     <i class="fa fa-dashboard"></i> <span>管理员管理</span>
                     <span class="pull-right-container">
@@ -47,5 +44,4 @@
             </li>
         </ul>
     </section>
-    <!-- /.sidebar -->
 </aside>
