--- a/src/main/resources/templates/include/js.html
+++ b/src/main/resources/templates/include/js.html
@@ -10,3 +10,5 @@
 <script src="/webjars/adminlte/2.3.11/plugins/fastclick/fastclick.js"></script>
 <!-- AdminLTE App -->
 <script src="/webjars/adminlte/2.3.11/dist/js/app.min.js"></script>
+<!-- layer -->
+<script src="/static/plugins/layer/layer.js"></script>
