--- a/src/main/resources/templates/teacher/answerRecord.html
+++ b/src/main/resources/templates/teacher/answerRecord.html
@@ -160,14 +160,10 @@
         </section>
     </div>
     <!-- 引入footer -->
-    <%
-    include("../include/footer.html"){}
-    %>
+    <% include("../include/footer.html"){} %>
 </div>
 <!-- 引入全局 js 脚本文件 -->
-<%
-include("../include/js.html"){}
-%>
+<% include("../include/js.html"){} %>
 <script src="/static/plugins/layer/layer.js"></script>
 <script src="/static/plugins/moment/moment.js"></script>
 <script src="/static/plugins/jquery-countdown/jquery.countdown.min.js"></script>
