--- a/src/main/resources/templates/teacher/announce/list.html
+++ b/src/main/resources/templates/teacher/announce/list.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 系统公告列表</title>
     <!-- 引入全局 css 文件 -->
-    <%
-    include("../include/css.html"){}
-    %>
+    <% include("../../include/css.html"){} %>
     <style>
-
         .table > tbody > tr:hover {
             cursor: pointer;
         }
@@ -25,28 +22,17 @@
         td {
             font-size: 16px;
         }
-
     </style>
-
-
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
-
 <div class="wrapper">
     <!-- 引入头部 -->
-    <%
-    include("include/header.html"){}
-    %>
+    <% include("../include/header.html"){}%>
     <!-- 左侧菜单栏 -->
-    <%
-    include("include/sider.html"){}
-    %>
+    <% include("../include/sider.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-
         <section class="content">
-
-
             <div class="box">
                 <div class="box-header with-border">
                     <h3 class="box-title">系统公告</h3>
@@ -73,18 +59,15 @@
                         </tbody>
                     </table>
                 </div>
-
             </div>
-
             <ul id="pagination-demo" class="pagination-sm pull-right"></ul>
         </section>
-
     </div>
-    <!-- 引入footer -->
-    <%
-    include("../include/footer.html"){}
-    %>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
 </div>
+<!-- 引入footer -->
+<% include("../../include/footer.html"){} %>
 </body>
 </html>
 
